--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -3,11 +3,15 @@
     text-align: center;
 }
 
-#home-section p { 
+#home-description { 
     background-color: rgb(25, 135, 84);
     padding: 10px 40px;
     border-radius: 10px;
     color: var(--ourWhite);
     font-weight: 400;
     font-size: large;
+}
+
+.card-section {
+    
 }
