--- a/src/components/base.css
+++ b/src/components/base.css
@@ -3,6 +3,7 @@
     --ourActiveGreen: rgb(22, 119, 74);
     --ourFocusGreen: rgb(18, 97, 60);
     --ourWhite:rgb(245, 245, 245);
+    --ourActiveWhite:rgb(205, 205, 205);
     --ourBlack:rgb(20, 20, 20);
     --ourBlackButton:rgba(34, 34, 34);
 }
