--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,5 +1,5 @@
 .card {
-  width: 190px;
+  width: 17em;
   background: var(--ourBlack);
   padding: 0.4em;
   border-radius: 6px;
@@ -8,9 +8,11 @@
 
 .card-img {
   background-color: rgb(236, 236, 236);
-  width: 100%;
   height: 130px;
+  width: 100%;
+  object-fit: cover;
   border-radius: 6px;
+  text-align: left;
 }
 
 .onStock {
@@ -21,46 +23,60 @@
 }
 
 .outStock {
-  color:rgba(54, 54, 54);
+  color: rgba(54, 54, 54);
   font-size: inherit;
   line-height: 30px;
   text-align: center;
 }
 
 .card-body {
-    padding: 5px 15px;
+  padding: 5px 15px;
 }
 
 .card-name {
-    color: var(--ourWhite);
+  color: var(--ourWhite);
 }
 
 .card-description {
-    background-color: rgb(25, 135, 84);
-    padding: 10px 20px;
-    border-radius: 10px;
-    color: var(--ourWhite);
-    font-weight: 400;
-    font-size: medium;
+  background-color: rgb(25, 135, 84);
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: var(--ourWhite);
+  font-weight: 400;
+  font-size: medium;
 }
 
 .card-price {
-    color: var(--ourWhite);
-    font-size: 2rem;
-    line-height: 30px;
+  color: var(--ourWhite);
+  font-size: 2rem;
+  line-height: 30px;
 }
 
 .card-info {
-    display: flex;
-    font-size: 1rem;
-    text-align: center;
-    justify-content: space-between;
+  display: flex;
+  font-size: 1rem;
+  text-align: center;
+  justify-content: space-between;
 }
 
 .card-button {
-    margin-top: 5px;
-    background-color: var(--ourGreen);
-    border: none;
-    color: var(--ourWhite);
-    font-weight: 600;
+  margin-top: 5px;
+  background-color: var(--ourGreen);
+  border: none;
+  color: var(--ourWhite);
+  font-weight: 600;
+}
+
+.card-button:hover {
+  background-color: var(--ourActiveGreen);
+}
+
+.card-button:hover {
+  background-color: var(--ourActiveGreen);
+}
+
+#off-button {
+  background-color: var(--ourBlackButton);
+  color: gray;
+  cursor: auto;
 }
