--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,17 +1,20 @@
-#home-section { 
+.home-section { 
     padding: 1% 10% 0%;
     text-align: center;
 }
 
-#home-description { 
+.home-description { 
     background-color: rgb(25, 135, 84);
     padding: 10px 40px;
+    text-align: center;
     border-radius: 10px;
     color: var(--ourWhite);
-    font-weight: 400;
-    font-size: large;
+    font-weight: 600;
+    font-size: 1.7rem;
 }
 
 .card-section {
-    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
