--- a/src/components/Error/error.css
+++ b/src/components/Error/error.css
@@ -53,7 +53,7 @@
   border-radius: 5px;
   padding: 9px;
   padding-bottom: 10px;
-  margin: 0px -9px;
+  margin-inline: -9px;
   background-color: rgba(255, 0, 0, 0);
   text-transform: uppercase;
   font-weight: 900;
