Removed comments, organized CSS order, removed unnecessary imports

--- a/src/components/Error/error.css
+++ b/src/components/Error/error.css
@@ -6,7 +6,7 @@
     background-color: rgba(25, 135, 84, 0.4);
   }
   100% {
-    background-color: rgb(25, 135, 84, 0.6);
+    background-color: rgba(25, 135, 84, 0.6);
   }
 }
 
@@ -18,13 +18,11 @@
 
 .error-section {
   display: flex;
-
   flex-direction: column;
   height: 100vh;
   background-color: var(--ourWhite);
   justify-content: center;
   align-items: center;
-
   background: radial-gradient(
     circle,
     rgba(255, 255, 255, 0) 45%,
@@ -54,7 +52,7 @@
   padding: 9px;
   padding-bottom: 10px;
   margin-inline: -9px;
-  background-color: rgba(255, 0, 0, 0);
+  background-color: transparent;
   text-transform: uppercase;
   font-weight: 900;
   text-decoration: none;
