--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -2,6 +2,5 @@ footer {
   background-color: var(--ourGreen);
   text-align: center;
   color: var(--ourWhite);
-  padding: 1px;
-  padding-top: 6px;
+  padding: 6px 0 1px;
 }
