Changed variable names to English.

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 footer {
-  background-color: var(--ourGreen);
+  background-color: var(--ourBlack);
   text-align: center;
   color: var(--ourWhite);
   padding: 6px 0 1px;
