Finished the entire site

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -55,3 +55,7 @@
 .social-icon:hover {
   color: var(--ourActiveWhite);
 }
+
+.accordion-button:active {
+  background-color: var(--ourFocusGreen);
+}
